feat: Implement User Login Module
- Add User entity and UserDao.
- Update AppDatabase to include User table.
- Create LoginActivity and RegisterActivity with layouts.
- Update SplashActivity to check login status and redirect.
- Update AndroidManifest.xml.
- Update todolist.md.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,11 @@
             android:name=".MainActivity"
             android:exported="true" />
         
+        <activity android:name=".LoginActivity"
+            android:exported="false"/>
+        <activity android:name=".RegisterActivity"
+            android:exported="false"/>
+        
         <activity android:name=".AddCourseActivity" />
         <activity android:name=".AddTodoActivity" />
         <activity android:name=".ManageCoursesActivity" />
