feat: Implement HomeFragment summary and Campus Market module
- HomeFragment:
  - Add Today's Courses and Todo List display.
  - Add shortcut to Campus Market.
- Campus Market:
  - Add MarketPost and MarketComment entities and MarketDao.
  - Create MarketActivity (feed), AddPostActivity (creation), PostDetailActivity (details & nested comments).
  - Implement nested comment logic (indentation).
  - Update AppDatabase to version 6.
- Update todolist.md.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,10 @@
         <activity android:name=".AddCourseActivity" />
         <activity android:name=".AddTodoActivity" />
         <activity android:name=".ManageCoursesActivity" />
+        <activity android:name=".MarketActivity" />
+        <activity android:name=".AddPostActivity" />
+        <activity android:name=".PostDetailActivity" 
+            android:windowSoftInputMode="adjustResize"/>
         
         <receiver android:name=".AlarmReceiver" />
         
